--- a/src/examples/MobilePayFruitshop-Android/app/build.gradle
+++ b/src/examples/MobilePayFruitshop-Android/app/build.gradle
@@ -6,7 +6,7 @@ repositories {
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.1"
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "dk.danskebank.mobilepayfruitshop"
@@ -17,7 +17,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
