Updated demo app for iOS - fixes issues with Xcode7 compatibility / configurations

--- a/src/examples/MobilePayFruitshop-iPhone/MobilePayFruitshop/Info.plist
+++ b/src/examples/MobilePayFruitshop-iPhone/MobilePayFruitshop/Info.plist
@@ -57,5 +57,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>mobilepay</string>
+    </array>
 </dict>
 </plist>
