--- a/src/examples/MobilePayFruitshop-WindowsPhone/MobilePay.AppSwitchDemo/MobilePay.AppSwitchDemo.WP81/MobilePay.AppSwitchDemo.WP81.csproj
+++ b/src/examples/MobilePayFruitshop-WindowsPhone/MobilePay.AppSwitchDemo/MobilePay.AppSwitchDemo.WP81/MobilePay.AppSwitchDemo.WP81.csproj
@@ -162,10 +162,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="crypto, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MobilePay.SDK.1.6.0.63\lib\wpa\crypto.dll</HintPath>
-    </Reference>
     <Reference Include="GalaSoft.MvvmLight">
       <HintPath>..\packages\Portable.MvvmLightLibs.5.0.0.1\lib\wpa81\GalaSoft.MvvmLight.dll</HintPath>
     </Reference>
@@ -179,16 +175,12 @@
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="MobilePay.SDK.Shared, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MobilePay.SDK.1.6.0.63\lib\wpa\MobilePay.SDK.Shared.dll</HintPath>
+      <HintPath>..\packages\MobilePay.SDK.1.7.0\lib\portable-netcore451+wpa81\MobilePay.SDK.Shared.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MobilePay.SDK.WP81, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MobilePay.SDK.1.6.0.63\lib\wpa\MobilePay.SDK.WP81.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="MobilePay.SDK.Universal, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MobilePay.SDK.1.7.0\lib\portable-netcore451+wpa81\MobilePay.SDK.Universal.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
