--- a/src/examples/MobilePayFruitshop-Android/gradle/wrapper/gradle-wrapper.properties
+++ b/src/examples/MobilePayFruitshop-Android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Dec 02 10:43:12 CET 2014
+#Thu Jun 16 11:48:49 CEST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.2.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
